Thu May 03 15:05:24 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian.h,include/xapian/termgenerator.h,queryparser/:
	  Initial cut of TermGenerator class.

Thu May 03 15:04:09 BST 2007  Olly Betts <olly@survex.com>

	* generate-exceptions.in: Hide the internal constructors of generated
	  error classes in the doxygen-generated API docs.

Thu May 03 04:37:51 BST 2007  Olly Betts <olly@survex.com>

	* expand/ortermlist.cc,expand/ortermlist.h: Fix compilation error when
	  --enable-assertions is used.

Thu May 03 03:57:42 BST 2007  Olly Betts <olly@survex.com>

	* common/safeunistd.h: Provide a POSIX-compatible sleep() function.
	* common/utils.h: Remove inferior POSIX-compatible sleep() function.

Thu May 03 03:17:02 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/: Mark all @internal member variables and functions
	  which aren't private with @private so doxygen doesn't document them.

Thu May 03 02:33:09 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/: Mark DocIDWrapper, RefCntBase, RefCntPtr,
	  TermNameWrapper, and TermPosWrapper as "@internal" so that they don't
	  show up in the doxygen-generated API documentation.  In particular,
	  this makes the class collaboration diagrams much more useful.
	* include/xapian/errorhandler.h: Declare the class in namespace Xapian
	  rather than with namespace Xapian:: since the latter seems to
	  confuse doxygen.

Thu May 03 02:31:33 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/unicode.h: Fix wrapping of comment.

Thu May 03 00:05:23 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/: Remove unused (and unimplemented) declarations
	  of begin_transaction_(), commit_transaction_() and
	  cancel_transaction_() from FlintWritableDatabase class.  Tidy up
	  handling of metainfo (total_length and lastdocid) to avoid
	  repeatedly parsing the special record, and make it easier to
	  store additional metainfo in future.