@@ -1,3 +1,9 @@
+Thu May 03 22:07:39 BST 2007  Olly Betts <olly@survex.com>
+
+	* common/remoteserver.h: Remove unused default values for
+	  active_timeout_ and idle_timeout_ parameters.  Fix repeated typo
+	  in documentation comments ('millisrconds' -> 'milliseconds').
+
 Thu May 03 15:05:24 BST 2007  Olly Betts <olly@survex.com>
 
 	* include/xapian.h,include/xapian/termgenerator.h,queryparser/:
